ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shortener.minikube.me  # Your custom domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-shortener  # Name of your service
            port:
              number: 5000
